RESOLVED FIXED277236
[macOS] Dictation UI no longer shows up when beginning dictation after focusing an empty text field
https://bugs.webkit.org/show_bug.cgi?id=277236
Summary [macOS] Dictation UI no longer shows up when beginning dictation after focusi...
Wenson Hsieh
Reported 2024-07-28 14:06:49 PDT
Attachments
Wenson Hsieh
Comment 1 2024-07-28 14:20:00 PDT
EWS
Comment 2 2024-07-28 15:48:24 PDT
Committed 281474@main (72212a28c6b2): <https://commits.webkit.org/281474@main> Reviewed commits have been landed. Closing PR #31364 and removing active labels.
EWS
Comment 3 2024-07-29 17:02:46 PDT
Committed 280938.150@safari-7619-branch (ee692b5f574c): <https://commits.webkit.org/280938.150@safari-7619-branch> Reviewed commits have been landed. Closing PR #1515 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.