Tools/TestWebKitAPI/Tests/mac/WKWebViewMacEditingTests.mm
@@ -89,6 +89,26 @@
 
 @end
 
+@interface WKWebView (MacEditingTests)
+- (std::pair<NSRect, NSRange>)_firstRectForCharacterRange:(NSRange)characterRange;
+@end
+
+@implementation WKWebView (MacEditingTests)
+
+- (std::pair<NSRect, NSRange>)_firstRectForCharacterRange:(NSRange)characterRange
+{
+    __block bool done = false;
+    __block std::pair<NSRect, NSRange> result;
+    [static_cast<id<NSTextInputClient_Async>>(self) firstRectForCharacterRange:characterRange completionHandler:^(NSRect firstRect, NSRange actualRange) {
+        result = { firstRect, actualRange };
+        done = true;
+    }];
+    TestWebKitAPI::Util::run(&done);
+    return result;
+}
+
+@end
+
 TEST(WKWebViewMacEditingTests, DoubleClickDoesNotSelectTrailingSpace)
 {
     RetainPtr<TestWKWebView> webView = adoptNS([[TestWKWebView alloc] initWithFrame:NSMakeRect(0, 0, 400, 400)]);
@@ -287,18 +307,14 @@ TEST(WKWebViewMacEditingTests, SetMarkedTextWithNoAttributedString)
 
 TEST(WKWebViewMacEditingTests, FirstRectForCharacterRange)
 {
-    auto configuration = [WKWebViewConfiguration _test_configurationWithTestPlugInClassName:@"WebProcessPlugInWithInternals" configureJSCForTesting:YES];
-    RetainPtr webView = adoptNS([[TestWKWebView<NSTextInputClient, NSTextInputClient_Async> alloc] initWithFrame:NSMakeRect(0, 0, 800, 600) configuration:configuration]);
+    RetainPtr webView = adoptNS([[TestWKWebView alloc] initWithFrame:NSMakeRect(0, 0, 800, 600)]);
 
     [webView synchronouslyLoadHTMLString:@"<body id='p' contenteditable>First Line<br>Second Line<br>Third Line<br></body>"];
     [webView stringByEvaluatingJavaScript:@"document.body.focus()"];
     [webView _setEditable:YES];
     [webView waitForNextPresentationUpdate];
-
-    __unsafe_unretained id<NSTextInputClient_Async> inputClient = (id<NSTextInputClient_Async>)webView.get();
-
-    __block bool doneTest1 = false;
-    [inputClient firstRectForCharacterRange: { 0, 31 } completionHandler:^(NSRect firstRect, NSRange actualRange) {
+    {
+        auto [firstRect, actualRange] = [webView _firstRectForCharacterRange:NSMakeRange(0, 31)];
         EXPECT_EQ(8, firstRect.origin.x);
         EXPECT_EQ(574, firstRect.origin.y);
         EXPECT_EQ(62, firstRect.size.width);
@@ -306,13 +322,9 @@ TEST(WKWebViewMacEditingTests, FirstRectForCharacterRange)
 
         EXPECT_EQ(0U, actualRange.location);
         EXPECT_EQ(10U, actualRange.length);
-        doneTest1 = true;
-    }];
-
-    TestWebKitAPI::Util::run(&doneTest1);
-
-    __block bool doneTest2 = false;
-    [inputClient firstRectForCharacterRange: { 0, 5 } completionHandler:^(NSRect firstRect, NSRange actualRange) {
+    }
+    {
+        auto [firstRect, actualRange] = [webView _firstRectForCharacterRange:NSMakeRange(0, 5)];
         EXPECT_EQ(8, firstRect.origin.x);
         EXPECT_EQ(574, firstRect.origin.y);
         EXPECT_EQ(30, firstRect.size.width);
@@ -320,13 +332,9 @@ TEST(WKWebViewMacEditingTests, FirstRectForCharacterRange)
 
         EXPECT_EQ(0U, actualRange.location);
         EXPECT_EQ(5U, actualRange.length);
-        doneTest2 = true;
-    }];
-
-    TestWebKitAPI::Util::run(&doneTest2);
-
-    __block bool doneTest3 = false;
-    [inputClient firstRectForCharacterRange: { 17, 4 } completionHandler:^(NSRect firstRect, NSRange actualRange) {
+    }
+    {
+        auto [firstRect, actualRange] = [webView _firstRectForCharacterRange:NSMakeRange(17, 4)];
         EXPECT_EQ(55, firstRect.origin.x);
         EXPECT_EQ(556, firstRect.origin.y);
         EXPECT_EQ(27, firstRect.size.width);
@@ -334,10 +342,33 @@ TEST(WKWebViewMacEditingTests, FirstRectForCharacterRange)
 
         EXPECT_EQ(17U, actualRange.location);
         EXPECT_EQ(4U, actualRange.length);
-        doneTest3 = true;
-    }];
+    }
+}
 
-    TestWebKitAPI::Util::run(&doneTest3);
+TEST(WKWebViewMacEditingTests, FirstRectForCharacterRangeInTextArea)
+{
+    RetainPtr webView = adoptNS([[TestWKWebView alloc] initWithFrame:NSMakeRect(0, 0, 800, 600)]);
+
+    [webView synchronouslyLoadHTMLString:@"<textarea></textarea>"];
+    [webView stringByEvaluatingJavaScript:@"document.querySelector('textarea').focus()"];
+    [webView waitForNextPresentationUpdate];
+
+    auto [rectBeforeTyping, rangeBeforeTyping] = [webView _firstRectForCharacterRange:NSMakeRange(0, 0)];
+    EXPECT_GT(rectBeforeTyping.origin.x, 0);
+    EXPECT_GT(rectBeforeTyping.origin.y, 0);
+    EXPECT_GT(rectBeforeTyping.size.height, 0);
+    EXPECT_EQ(rangeBeforeTyping.location, 0U);
+    EXPECT_EQ(rangeBeforeTyping.length, 0U);
+
+    [webView insertText:@"a"];
+    [webView waitForNextPresentationUpdate];
+
+    auto [rectAfterTyping, rangeAfterTyping] = [webView _firstRectForCharacterRange:NSMakeRange(1, 0)];
+    EXPECT_GT(rectAfterTyping.origin.x, rectBeforeTyping.origin.x);
+    EXPECT_GT(rectAfterTyping.origin.y, 0);
+    EXPECT_GT(rectAfterTyping.size.height, 0);
+    EXPECT_EQ(rangeAfterTyping.location, 1U);
+    EXPECT_EQ(rangeAfterTyping.length, 0U);
 }
 
 #endif // PLATFORM(MAC)
